fixed spacing

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -376,7 +376,6 @@ body {
   position: absolute;
   z-index: 10 !important;
   background-color: $background;
-  padding-bottom: 3rem;
 
   .edittags__close {
     border: none;
